<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="server"
        android:title="@string/server" >
        <EditTextPreference
            android:defaultValue="192.168.0.1"
            android:dialogTitle="Host"
            android:key="serverHost"
            android:summary="@string/serverHostSummary"
            android:title="MPD Host" />
        <EditTextPreference
            android:defaultValue="6600"
            android:dialogTitle="Port"
            android:key="serverPort"
            android:summary="@string/serverPortSummary"
            android:title="MPD Port" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="downloadLyrics"
            android:summary="@string/downloadLyricsSummary"
            android:title="@string/downloadLyrics" />
    </PreferenceCategory>

    <!--
    <PreferenceCategory android:title="@string/dialog_based_preferences" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:key="edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:title="@string/title_edittext_preference" />

        <ListPreference
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:key="list_preference"
            android:summary="@string/summary_list_preference"
            android:title="@string/title_list_preference" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/launch_preferences" >
        <PreferenceScreen
            android:summary="@string/summary_intent_preference"
            android:title="@string/title_intent_preference" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_attributes" >
        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:summary="@string/summary_parent_preference"
            android:title="@string/title_parent_preference" />

        The visual style of a child is defined by this styled theme attribute.
        <CheckBoxPreference
            android:dependency="parent_checkbox_preference"
            android:key="child_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/summary_child_preference"
            android:title="@string/title_child_preference" />
    </PreferenceCategory>
    -->

</PreferenceScreen>