<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="0dp" >

        <ImageButton
            android:id="@+id/controlPrevious"
            style="@style/control_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:src="@drawable/player_previous"
            android:text="@string/previous" />

        <ImageButton
            android:id="@+id/controlPlay"
            style="@style/control_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/previous"
            android:src="@drawable/player_play"
            android:text="@string/play" />

        <ImageButton
            android:id="@+id/controlPause"
            style="@style/control_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/pause"
            android:src="@drawable/player_pause"
            android:text="@string/pause" />

        <ImageButton
            android:id="@+id/controlNext"
            style="@style/control_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/next"
            android:src="@drawable/player_next"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textProgress"
            style="@style/subTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp" />

        <SeekBar
            android:id="@+id/seekProgress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>